# python.web-hw9

./: pyproject.toml
hw9/hw9/: authors.json  config.ini  main.py  quotes.json  result.json
hw9/hw9/db_settings/: connect.py  models.py
hw9/hw9/spiders/: data.py
